# Family_Image_Archive

./: .gitignore  AGENTS.md  AUTONOMOUS_AGENT_SETUP.md  AUTONOMOUS_AGENT_SETUP_CORRECTED.md  README.md  RESTART_README.txt  apple_speech.py  launch_bucket_review.command  overnight_pipeline.command  photo_voice_recorder.py
cli/: review.py  (+1 more)
photo_archive/: README.md  pyproject.toml
photo_archive/archive_lib/: __init__.py  bucket_overrides.py  config.py  db.py  decisions.py  derived_state.py  face_clusters.py  face_ignores.py  face_matcher.py  face_tags.py  face_votes.py  faces.py  filename_parser.py  gallery.py  hashing.py  imaging.py  label_bucket_rejects.py  label_utils.py  log.py  negatives.py  ocr.py  orientation.py  paths.py  pending.py  photo_transforms.py  pipeline.py  publish.py  repair.py  reporting.py  scan_audit.py  sidecar.py  staging.py  thumbs.py  variant_selector.py  web_server.py  webimage.py
photo_archive/cli/: assign.py  attach_backs.py  export_people.py  faces_queue.py  pipeline.py  review.py
photo_archive/cli_legacy_20251230/: faces_queue.py
photo_archive/cli_legacy_20251230_2/: faces_queue.py
photo_archive/cli_legacy_20251230_3/: __init__.py  export_people.py  faces_queue.py  ingest.py  review.py
photo_archive/cli_legacy_20251230_4/: faces_review.py  gallery.py  negatives.py  phash_report.py  publish.py  reconcile_pending.py
photo_archive/cli_legacy_20251230_5/: phash_dupes.py  phash_prune.py  phash_viewer.py  thumbs.py
photo_archive/cli_legacy_20251230_6/: derived.py  faces.py  faces_queue.py  ocr.py  repair.py  report.py  review.py
(+96 files in other folders)
